api_almost_done